css/styles.css
ul {
list-style-type: none;
margin: 0;
padding: 0;
overflow: hidden;
background-color: #333;
}

li {
float: left;
}

li a {
display: block;
color: white;
text-align: center;
padding: 14px 16px;
text-decoration: none;
}

li a:hover {
background-color: #111;
}

body{
text-align: center;
background-image: url(https://i.imgur.com/QTCRd0S.jpg);
background-size: cover; /* <------ */
background-repeat: no-repeat;
background-position: center center;

}

.container{
margin-top: 350px;

}

button{
width:300px;
height:100px;
}

.game{
display: none;
}
img{
margin-top:10px;
margin-bottom: 50px;
}

p {
  color: grey;
}

h1 {
  color: white;
}

h5 {
  color: lightgrey;
}

.playGame{
    display: none;
}


#displayBox {
    background-color:  grey;
    background: rgba(192,192,192, 0.5);
    width: 730px;
    height: 700px;
    text-align: center;
    border: 2px solid black;
    padding-top: 100px;
    font-size: 100px;
    margin-right:30px;
  }
  
  #title {
    text-align: center;
  }
  
  #timeLimit {
    padding: 25px;
    background-color: grey;
    border: 2px solid black;
    text-align: center;
    margin: 5px;
    padding-bottom: 130px;
  }

  #scoreBox {
    padding: 25px;
    background-color: grey;
    border: 2px solid black;
    text-align: center;
    margin: 5px;
    padding-bottom: 130px;
  }
  
  #font {
    font-weight: bold;
    font-size: 15px;
  }
  
  #footer {
    text-align: center;
    font-size: 15px;
    margin: 5px;
    color:red;
  }
  
  #title {
    font-size: 50px;
    font-weight: bold;
    font-style: italic;
  }
  
  #inputBox {
    height: 50px;
  }
  
  #prompts {
    padding: 25px;
    background-color: grey;
    border: 2px solid black;
    text-align: center;
    margin: 5px;
  }
  
  #instructions {
    padding: 25px;
    background-color: grey;
    border: 2px solid black;
    text-align: center;
    margin: 5px;
  }
  
  #bugBox {
    padding: 25px;
    background-color: grey;
    border: 2px solid black;
    text-align: center;
    margin: 5px;
    padding-bottom: 140px;
  }
  
  #victoryimg img{
    width:90%;
    height:auto;
  }

